--- a/train.css
+++ b/train.css
@@ -1,12 +1,59 @@
-ul{
-    list-style-type: none;
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: dotted;
 }
 
 /* header */
-.navbar-nav{
-    display: flex;
+.navbar-nav {
+  display: flex;
+  margin-left: 200px;
+  align-content: center;
 }
 
-.ml-auto{
-    margin-left: auto;
+.ml-auto {
+  justify-content: end;
+}
+
+.nav-item {
+  margin-right: 15px;
+}
+
+.nav-link {
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+strong {
+  font-size: x-large;
+}
+
+/* sidebar */
+.main-sidebar {
+  width: 200px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
+  background-color: #80b3e6;
+}
+
+.brand-link {
+  display: block;
+  font-size: x-large;
+  padding: 2rem 1rem;
+}
+
+/* content */
+.content-wrapper {
+  margin-left: 250px;
 }
