--- a/train.css
+++ b/train.css
@@ -6,11 +6,29 @@ a {
   text-decoration: none;
 }
 
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: dotted;
+a:hover {
+  background-color: rgba(226, 112, 112, 0.1);
+  color: black;
+  border-radius: 20px;
 }
+
+a:active {
+  color: rgb(76, 230, 89);
+  background-color: rgba(226, 112, 112, 0.1);
+  border-radius: 20px;
+}
+
+.active {
+  color: rgb(76, 230, 89);
+  background-color: rgba(226, 112, 112, 0.1);
+  border-radius: 20px;
+}
+
+/*  */
+/* .wrapper{
+    width: 60%;
+    margin: auto;
+} */
 
 /* header */
 .navbar-nav {
@@ -24,16 +42,33 @@ a:active {
 }
 
 .nav-item {
-  margin-right: 15px;
 }
 
 .nav-link {
-  display: block;
   padding: 0.5rem 1rem;
+  display: flex;
+}
+
+.nav-icon {
+  margin-top: 15px;
+  margin-right: 5px;
+  width: 20px;
 }
 
 strong {
   font-size: x-large;
+}
+
+.img-circle {
+  border-radius: 50%;
+}
+
+.elevation-2 {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  max-height: 30px;
+  float: left;
+  margin-top: -7px;
+  margin-right: 5px;
 }
 
 /* sidebar */
@@ -53,7 +88,57 @@ strong {
   padding: 2rem 1rem;
 }
 
+.brand-link:hover {
+  background-color: transparent;
+}
+
+.brand-image {
+  float: left;
+  margin-right: 5px;
+  margin-top: -7px;
+  max-height: 40px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+}
+
+.new-task {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  background-color: #f0eefc;
+  border-radius: 0px 40px 40px 40px;
+  width: 150px;
+  height: 50px;
+  color: #7864bf;
+  font-weight: bold;
+  margin-left: 25px;
+  text-align: center;
+}
+
+.new-task p {
+  padding: 15px;
+}
+
+.nav-sidebar {
+  margin-left: -20px;
+}
+
+.fa-angle-left {
+  margin-left: 10px;
+}
+
 /* content */
 .content-wrapper {
   margin-left: 250px;
+}
+
+.card {
+  width: max-content;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  border-radius: 2px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  background-color: #F7F6FD;
+}
+
+.card-item{
+    margin: 20px;
 }
