--- a/train.css
+++ b/train.css
@@ -1,3 +1,10 @@
+/* @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {  } */
+
+/*  */
+* {
+  font-family: "Public Sans", sans-serif;
+}
+
 ul {
   list-style-type: none;
 }
@@ -7,8 +14,8 @@ a {
 }
 
 a:hover {
-  background-color: rgba(226, 112, 112, 0.1);
-  color: black;
+  /* background-color: rgba(226, 112, 112, 0.1); */
+  color: rgb(163, 161, 161);
   border-radius: 20px;
 }
 
@@ -16,6 +23,14 @@ a:active {
   color: rgb(76, 230, 89);
   background-color: rgba(226, 112, 112, 0.1);
   border-radius: 20px;
+}
+
+.menu a:hover{
+  border-left: 3px solid #6655C1 ;
+}
+
+.d-none a:hover{
+  border-bottom: 3px solid #6655C1;
 }
 
 .active {
@@ -41,16 +56,27 @@ a:active {
   justify-content: end;
 }
 
+.ml-auto li{
+  margin-right: 10px;
+}
+
 .nav-item {
+}
+
+.circle{
+  background-color: #F7F6FD;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  border-radius: 50%;
 }
 
 .nav-link {
   padding: 0.5rem 1rem;
   display: flex;
+  color: black;
 }
 
 .nav-icon {
-  margin-top: 15px;
+  margin-top: 16px;
   margin-right: 5px;
   width: 20px;
 }
@@ -64,7 +90,7 @@ strong {
 }
 
 .elevation-2 {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
   max-height: 30px;
   float: left;
   margin-top: -7px;
@@ -79,7 +105,7 @@ strong {
   left: 0;
   bottom: 0;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
-  background-color: #80b3e6;
+  background-color: #F7F6FD;
 }
 
 .brand-link {
@@ -98,6 +124,10 @@ strong {
   margin-top: -7px;
   max-height: 40px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+}
+
+.brand-text{
+  color: #46AE86;
 }
 
 .new-task {
@@ -135,10 +165,43 @@ strong {
   justify-content: space-around;
   align-content: center;
   border-radius: 2px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
-  background-color: #F7F6FD;
+  background-color: #f7f6fd;
+  margin-top: 10px;
 }
 
-.card-item{
-    margin: 20px;
+.card-item {
+  margin: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 20px;
+}
+
+.fa-info-circle{
+  color: gray;
+  font-size: 15px;
+}
+
+.status{
+  border-radius: 0px 40px 40px 40px;
+  width: 140px;
+  height: 30px;
+  margin-left: 25px;
+  border: 2px solid rgb(150, 148, 148);
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.fa-circle{
+  font-size: 12px;
+  color: orange;
+  margin-right: 5px;
+}
+
+.current{
+  font-size: 12px;
+}
+
+.up-next{
+  margin-top: 10px;
+  font-size: 12px;
 }
